feat: prod deployment

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
 PORT=4000
+FRONTEND_URL=http://localhost:3000
+
+# Database Configuration
+# Option 1: Use DATABASE_URL (takes precedence)
+DATABASE_URL=postgresql://postgres:admin@localhost:5432/ekklesia
+
+# Option 2: Use individual connection parameters (used if DATABASE_URL is not set)
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=ekklesia
-DB_USER=postgres
-DB_PASSWORD=yourpassword
+DB_USER=ekklesia_user
+DB_PASSWORD=ekklesia_user_password
